    the authorization identity instead of the authentication identity and
    to use the authorization identity for access control (such as
    mod_webauthldap privilege group lookups).  WEBAUTH_USER will always be
    set to the authentication identity.  This directive is allowed in
    .htaccess files (if authentication overrides are allowed) as well as
    anywhere in the main Apache configuration.

    Add new mod_webkdc Apache directive WebKdcLoginTimeLimit, which
    controls the time limit for completing a multi-step login process
    (such as with multifactor authentication) and how recently
    authentication must have occurred to count for session factors and
    forced login.  The default value is five minutes, matching the
    previous default behavior for multifactor logins.

    WebAuthForceLogin no longer forces re-entry of the user's password if
    the user has done an interactive authentication within the
    WebKdcLoginTimeLimit interval (five minutes by default).  Initial
    authentication factors also count as session factors for single
    sign-on authentications within that time interval.  This allows
    WebAuthForceLogin to work in combination with other features such as
    multi-step authentication processes and authorization identities and
    improves the user experience when simultaneously visiting multiple
    sites with forced login set.  To disable this behavior and always
    force reauthentication, WebKdcLoginTimeLimit can be set to 0s, but
    this will make multi-stage login processes, such as multifactor,
    impossible.

    Add replay detection to WebLogin.  When enabled, only one username and
    password authentication is permitted with a given request token, and
    further authentications with the same request token are rejected as
    replays.  This can protect against an attacker using the back button
    in an abandoned browser to replay the form submission on the WebLogin