@@ -1075,7 +1075,7 @@ static int
 handle_id_token(const struct webauth_token_id *id, MWA_REQ_CTXT *rc)
 {
     const char *mwa_func = "handle_id_token";
-    const char *subject;
+    const char *subject, *authz_subject;
     unsigned long now;
 
     now = time(NULL);
@@ -1084,6 +1084,14 @@ handle_id_token(const struct webauth_token_id *id, MWA_REQ_CTXT *rc)
                      "mod_webauth: %s: id token too old", mwa_func);
         return 0;
     }
+
+    /*
+     * The authz_subject value from the id token is only honored if the token
+     * type is webkdc.  A krb5 subject auth type means we're supposed to
+     * independently verify their identity, but there's no way to
+     * independently verify the authorization identity.
+     */
+    authz_subject = id->authz_subject;
     if (id->auth_data != NULL) {
         MWA_CRED_INTERFACE *mci;
 
@@ -1091,6 +1099,7 @@ handle_id_token(const struct webauth_token_id *id, MWA_REQ_CTXT *rc)
         if (mci == NULL)
             return 0;
         subject = mci->validate_sad(rc, id->auth_data, id->auth_data_len);
+        authz_subject = NULL;
     } else if (strcmp(id->auth, "webkdc") == 0) {
         subject = id->subject;
     } else {
@@ -1106,7 +1115,7 @@ handle_id_token(const struct webauth_token_id *id, MWA_REQ_CTXT *rc)
             ap_log_error(APLOG_MARK, APLOG_DEBUG, 0, rc->r->server,
                          "mod_webauth: %s: got subject(%s) from id token",
                          mwa_func, subject);
-        make_app_cookie(subject, id->authz_subject, 0, id->expiration, 0,
+        make_app_cookie(subject, authz_subject, 0, id->expiration, 0,
                         id->initial_factors, id->session_factors, id->loa, rc);
     } else {
         /* everyone else should have logged something, right? */
